--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type" : "module"
-  ,
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jbourkea/NutriChoice_Team8FIT3162-Server.git"
@@ -22,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^6.2.4"
   }
 }
