--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The server for the NutriChoice iOS application. Team 8 Sem 1 2022",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon /index.js"
   },
   "type": "module",
   "repository": {
@@ -25,5 +26,8 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
