--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "The server for the NutriChoice iOS application. Team 8 Sem 1 2022",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon /index.js"
+    "test": "nodemon index.js",
+    "start": "node index.js"
   },
   "type": "module",
   "repository": {
